fix: fix text overflow

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,7 +6,6 @@
     margin: 0;
     max-width: 294px;
     text-align: center;
-    display: contents;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -16,5 +15,6 @@
     .profile__title {
         font-size: 27px;
         line-height: 33px;
+        max-width: 189px;
     }
 }
